samples/_failures_safe/1761490833_a20716_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3732553a.c: In function ‘main’:
./samples/SAFE/__tmp_3732553a.c:148:12: error: missing terminating " character
  148 |     printf("Nodes: 0-5, Testing paths from node
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3732553a.c:148:5: error: expected expression at end of input
  148 |     printf("Nodes: 0-5, Testing paths from node
      |     ^~~~~~
./samples/SAFE/__tmp_3732553a.c:148:5: error: expected declaration or statement at end of input
